// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodePushStatus renders renders 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        Object {
          "color": "#4caf50",
          "fontSize": 20,
          "marginRight": 7.5,
        },
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#212121",
        "fontFamily": "Nunito-Regular",
        "fontSize": 15,
        "marginRight": 27.5,
        "textAlign": "center",
      }
    }
  >
    Up to date
  </Text>
</View>
`;

exports[`CodePushStatus renders renders the loading state 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
    style={
      Object {
        "marginRight": 7.5,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#212121",
        "fontFamily": "Nunito-Regular",
        "fontSize": 15,
        "marginRight": 27.5,
        "textAlign": "center",
      }
    }
  >
    Up to date
  </Text>
</View>
`;
